[package]
name = "todo"
version = "0.1.1"
authors = ["Avi Parampampam <aviparampampam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
dirs = "4.0"
clap = "2.33.3"
